# OmniCC

./: README.md  pyproject.toml
omni_cc/: __main__.py  compiler.py  runtime.py
omni_cc/nn/: __init__.py  activations.py  conv.py  embedding.py  functional.py  linear.py  module.py  normalization.py  pooling.py
omni_cc/op/: __init__.py
omni_cc/pipelines/: stable_diffusion_xl.py
omni_cc/relax_models/: autoencoder_kl.py  resnet.py  unet_2d_blocks.py  unet_2d_cond.py
omni_cc/utils/: target_utils.py
tests/: test_autoencoder_kl.py
