[tool.poetry]
name = "omnicc"
version = "0.1.0"
description = "Omni Compiler Collection"
authors = ["Ming Yang <ymviv@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = { version = "^0.9.0", extras = ["all"] }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
